fix text align

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ lume-icon {
   color: var(--color-text);
   box-sizing: border-box;
   font-family: var(--font-family-ui);
+  text-align: left;
   font-size: 14px;
   border-radius: var(--border-radius) var(--border-radius) 0 0;
   overflow: hidden;
